<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">RSS新闻</string>
    <string name="login_tip">登录</string>
    <string name="left_drawer_no_login_tip">点击按钮登录\n登录后，将获得收藏、转发等更多功能</string>
    <string name="copyright">copyright@swl</string>
    <string name="left_drawer_item_home">首页</string>
    <string name="left_drawer_item_search">首页</string>
    <string name="left_drawer_item_favorite">收藏</string>
    <string name="left_drawer_item_message">消息</string>
    <string name="left_drawer_item_offline">离线</string>
    <string name="left_drawer_item_setting">缓存</string>
    <string name="left_drawer_item_feedback">关于</string>
    <string name="left_drawer_item_exit">退出</string>
    <string name="alert_text">更多内容，敬请期待…</string>
    <string name="load_text">正在加载中…</string>
    <string name="news_detail_imageCon">新闻图片</string>
    <string name="loading">正在加载中...</string>
    <string name="collect_text_none">空空如也\n快去收藏感兴趣的文章吧.</string>
    <string name="share_hint_text">说点什么吧..</string>
    <string name="ok_text">确定</string>
    <string name="cancel_text">取消</string>

</resources>