<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/left_drawer_item_bg_normal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:minHeight="102.0dip"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15.0dip"
            android:layout_marginTop="30.0dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/left_drawer_user_name"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16.0dip"
            android:layout_marginTop="34.0dip"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/weibo_btn"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/ic_drawer_weibo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tishi_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13.0dip"
            android:gravity="center_horizontal"
            android:text="@string/left_drawer_no_login_tip"
            android:textColor="@color/left_drawer_no_login_tip_text"
            android:textSize="12.0sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:orientation="vertical" >

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/home_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_pgc"
                    android:text="@string/left_drawer_item_search" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/favorite_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_favorite"
                    android:text="@string/left_drawer_item_favorite" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/offline_divider"
                style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/cache_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_appstore"
                    android:text="@string/left_drawer_item_setting" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <RelativeLayout
                android:id="@+id/about_btn"
                style="@style/left_drawer_item_layout" >

                <TextView
                    style="@style/left_drawer_item_text"
                    android:drawableLeft="@drawable/ic_drawer_feedback"
                    android:text="@string/left_drawer_item_feedback" />
            </RelativeLayout>

            <ImageView style="@style/left_drawer_item_line" />

            <ImageView
                android:id="@+id/appstore_line"
                style="@style/left_drawer_item_line" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="19.0dip"
        android:layout_weight="0.0"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/night_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:text="@string/copyright"
            android:textColor="@color/left_drawer_no_login_tip_text"
            android:textSize="10.0sp" />
    </LinearLayout>

</LinearLayout>